Moved the Outlet component out of the Box element to make sure the CSS works as expected

--- a/src/Components/Dashboard.css
+++ b/src/Components/Dashboard.css
@@ -2,7 +2,7 @@
     font-size: 50px;
     font-family: 'Skranji', cursive;
     color: #0E185F;
-    margin: 0px;
+    margin-top: 30px;
     text-align: center;
 }
 .subtitle {
